--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">DuocUC Asistencia</string>
-    <string name="title_activity_main">DuocUC Asistencia</string>
-    <string name="package_name">duocuc.asistencia.moises</string>
-    <string name="custom_url_scheme">duocuc.asistencia.moises</string>
+    <string name="app_name">RegistrAPP</string>
+    <string name="title_activity_main">RegistrAPP</string>
+    <string name="package_name">duocuc.registrapp.moises</string>
+    <string name="custom_url_scheme">duocuc.registrapp.moises</string>
 </resources>
